--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,3 @@
 .DS_Store
-.idea
-*.ai
-*.log
-*.pdf
-*.psd
-*.sublime*
-*.vscode
-npm-debug.*
-
-# Folders
-build/
-css/*.css
-node_modules/
+node_modules
+public/bundle.*
